--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,18 +16,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
     "@angular/http": "^7.2.16",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/platform-server": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@types/geojson": "7946.0.8",
     "@types/lodash": "4.14.112",
     "ag-grid": "^16.0.1",
@@ -51,13 +51,13 @@
     "rxjs": "~6.6.7",
     "rxjs-tslint": "^0.1.8",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular/cli": "~8.3.29",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/cli": "~9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@types/d3": "^4.10.1",
     "@types/d3-array": "1.0.5",
     "@types/d3-axis": "1.0.5",
@@ -66,9 +66,9 @@
     "@types/d3-shape": "1.0.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
     "adal-angular": "^1.0.17",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^5.1.2",
     "crypto-js": "^3.1.9-1",
     "http-status-codes": "^1.3.0",
     "jasmine-console-reporter": "^3.0.2",
@@ -86,6 +86,6 @@
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   }
 }
