--- a/webapp/angular.json
+++ b/webapp/angular.json
@@ -7,11 +7,17 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
+      "schematics": {
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
+      
+      "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "aot": true,
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -26,7 +32,7 @@
               "node_modules/offline-js/themes/offline-theme-chrome.css",
               "node_modules/offline-js/themes/offline-language-english.css",
               "node_modules/ag-grid/dist/styles/ag-grid.css",
-              "node_modules/ag-grid/dist/styles/theme-blue.css"
+              "node_modules/ag-grid/dist/styles/ag-theme-blue.css"
             ],
             "scripts": [
               "node_modules/offline-js/offline.js",
@@ -34,65 +40,49 @@
             ]
           },
           "configurations": {
-            "stg": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.stg.ts"
-                }
-              ]
-            },
             "production": {
               "budgets": [
                 {
+                  "type": "initial",
+                  "maximumWarning": "6mb",
+                  "maximumError": "10mb"
+                },
+                {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
+                  "maximumWarning": "30kb",
+                  "maximumError": "50kb"
                 }
               ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
-              ]
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": true,
+              "optimization": true,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "pacman-spa:build"
-          },
           "configurations": {
-            "stg": {
-              "browserTarget": "pacman-spa:build:stg"
-            },
             "production": {
               "browserTarget": "pacman-spa:build:production"
+            },
+            "development": {
+              "browserTarget": "pacman-spa:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -116,7 +106,7 @@
               "node_modules/offline-js/themes/offline-theme-chrome.css",
               "node_modules/offline-js/themes/offline-language-english.css",
               "node_modules/ag-grid/dist/styles/ag-grid.css",
-              "node_modules/ag-grid/dist/styles/theme-blue.css",
+              "node_modules/ag-grid/dist/styles/ag-theme-blue.css",
               "node_modules/ngx-select-dropdown/dist/assets/style.css"
             ],
             "assets": [
@@ -126,30 +116,7 @@
           }
         }
       }
-    },
-    "pacman-spa-e2e": {
-      "root": "e2e",
-      "sourceRoot": "e2e",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "pacman-spa:serve"
-          }
-        }
-      }
     }
   },
-  "defaultProject": "pacman-spa",
-  "schematics": {
-    "@schematics/angular:component": {
-      "prefix": "app",
-      "style": "css"
-    },
-    "@schematics/angular:directive": {
-      "prefix": "app"
-    }
-  }
+  "defaultProject": "pacman-spa"
 }
