--- a/webapp/package.json
+++ b/webapp/package.json
@@ -69,15 +69,14 @@
         "codelyzer": "^6.0.2",
         "crypto-js": "^3.1.9-1",
         "http-status-codes": "^1.3.0",
-        "jasmine-console-reporter": "3.1.0",
-        "jasmine-core": "4.3.0",
-        "jasmine-spec-reporter": "7.0.0",
-        "karma": "6.4.0",
-        "karma-chrome-launcher": "3.1.1",
-        "karma-cli": "2.0.0",
-        "karma-coverage-istanbul-reporter": "3.0.3",
-        "karma-jasmine": "5.1.0",
-        "karma-jasmine-html-reporter": "2.0.0",
+        "jasmine-console-reporter": "^3.1.0",
+        "jasmine-core": "~4.1.1",
+        "jasmine-spec-reporter": "^7.0.0",
+        "karma": "~6.3.20",
+        "karma-chrome-launcher": "~3.1.1",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.0.1",
+        "karma-jasmine-html-reporter": "~2.0.0",
         "protractor": "7.0.0",
         "protractor-jasmine2-html-reporter": "0.0.7",
         "replace-in-file": "^3.4.2",
