--- a/jobs/job-scheduler/pom.xml
+++ b/jobs/job-scheduler/pom.xml
@@ -134,6 +134,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
         </plugins>
     </build>
 
