--- a/.github/workflows/SonarCodeAnalysis.yaml
+++ b/.github/workflows/SonarCodeAnalysis.yaml
@@ -1,12 +1,12 @@
-name: Build
+name: Sonarcloud-Build
 on:
   push:
     branches: [master, v*]
   pull_request:
     branches: [master, v*]
 jobs:
-  sonarcloud:
-    name: SonarCloud
+  sonarcloudBuild:
+    name: SonarCloud-Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -33,7 +33,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze pull_request
-        if: ${{github.event.pull_request.base.ref == 'master' || github.event.pull_request.base.ref == 'v*'}}
+        if: ${{github.event.pull_request.base.ref == 'master' || github.event.pull_request.base.ref == 'v*.*.*'}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
