--- a/jobs/gcp-discovery/pom.xml
+++ b/jobs/gcp-discovery/pom.xml
@@ -120,6 +120,11 @@
             <artifactId>google-cloud-container</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-essential-contacts</artifactId>
+            <version>2.1.3</version><!-- {x-version-update:google-cloud-essential-contacts:current} -->
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-dns -->
         <dependency>
             <groupId>com.google.cloud</groupId>
