--- a/jobs/gcp-discovery/pom.xml
+++ b/jobs/gcp-discovery/pom.xml
@@ -131,6 +131,11 @@
             <artifactId>google-api-services-cloudresourcemanager</artifactId>
             <version>v1-rev20211107-1.32.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-apikeys</artifactId>
+            <version>0.3.0</version>
+        </dependency>
 
 
     </dependencies>
