--- a/jobs/gcp-discovery/pom.xml
+++ b/jobs/gcp-discovery/pom.xml
@@ -137,6 +137,26 @@
             <version>0.3.0</version>
         </dependency>
 
+        <!-- shefali  -->
+
+
+        <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-functions -->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-functions</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.21.12</version>
+        </dependency>
+
+
+
+
 
     </dependencies>
     <dependencyManagement>
