--- a/jobs/pacman-rule-engine-2.0/pom.xml
+++ b/jobs/pacman-rule-engine-2.0/pom.xml
@@ -174,6 +174,14 @@
            <artifactId>resilience4j-retry</artifactId>
            <version>0.14.1</version>
        </dependency>
+
+
+
+		<dependency>
+			<groupId>com.paladincloud</groupId>
+			<artifactId>gcp-discovery</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
