--- a/commons/pac-batch-commons/pom.xml
+++ b/commons/pac-batch-commons/pom.xml
@@ -312,7 +312,17 @@
 			<version>1.42.0</version>
 			<scope>compile</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.3.22</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
+		</dependency>
 
 	</dependencies>
 
