--- a/webapp/package.json
+++ b/webapp/package.json
@@ -43,6 +43,7 @@
         "lodash": "^4.17.21",
         "moment": "^2.24.0",
         "ng-apexcharts": "^1.7.1",
+        "ngx-google-analytics": "^13.0.1",
         "ngx-highlight": "^0.0.3",
         "ngx-infinite-scroll": "^0.8.3",
         "ngx-select-dropdown": "^2.1.0",
