--- a/.github/workflows/sql-review.yml
+++ b/.github/workflows/sql-review.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql:8.0
+        image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: pacmandata
@@ -19,12 +19,10 @@ jobs:
         run:  |
           echo "execute DB.sql.sql "
           mysql -h 127.0.0.1 --port 8888 -uroot -ppassword < installer/resources/pacbot_app/files/DB.sql
-          echo "execute DB_Azure_AD.sql"
-          mysql -h 127.0.0.1 --port 8888 -uroot -ppassword < installer/resources/pacbot_app/files/DB_Azure_AD.sql
           echo "execute DB_Policy.sql"
           mysql -h 127.0.0.1 --port 8888 -uroot -ppassword < installer/resources/pacbot_app/files/DB_Policy.sql
-          echo "execute DB_PolicyPack.sql"
-          mysql -h 127.0.0.1 --port 8888 -uroot -ppassword < installer/resources/pacbot_app/files/DB_PolicyPack.sql
           echo "execute DB_Cognito.sql"
           mysql -h 127.0.0.1 --port 8888 -uroot -ppassword < installer/resources/pacbot_app/files/DB_Cognito.sql
-          
+          echo "execute DB_Azure_AD.sqll"
+          mysql -h 127.0.0.1 --port 8888 -uroot -ppassword < installer/resources/pacbot_app/files/DB_Azure_AD.sql
+
