--- a/api/pacman-api-admin/pom.xml
+++ b/api/pacman-api-admin/pom.xml
@@ -211,7 +211,11 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.12.261</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
-
+		<dependency>
+			<groupId>com.microsoft.azure</groupId>
+			<artifactId>azure</artifactId>
+			<version>1.41.3</version>
+		</dependency>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-sts</artifactId>
@@ -274,6 +278,11 @@
 			<groupId>ch.qos.logback.contrib</groupId>
 			<artifactId>logback-json-classic</artifactId>
 			<version>0.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-secretsmanager</artifactId>
+			<version>1.12.413</version>
 		</dependency>
 
 		<dependency>
