--- a/api/pacman-api-admin/pom.xml
+++ b/api/pacman-api-admin/pom.xml
@@ -300,6 +300,11 @@
 			<artifactId>aws-java-sdk-secretsmanager</artifactId>
 			<version>1.12.413</version>
 		</dependency>
+		<dependency>
+			<artifactId>google-cloud-compute</artifactId>
+			<groupId>com.google.cloud</groupId>
+			<version>1.8.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
