--- a/jobs/gcp-discovery/pom.xml
+++ b/jobs/gcp-discovery/pom.xml
@@ -190,54 +190,36 @@
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>build-a</id>
-                        <configuration>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                            <finalName>pacbot-gcp-discovery</finalName>
-                        </configuration>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                <createDependencyReducedPom>false</createDependencyReducedPom>
-                    <finalName>pacbot-gcp-discovery</finalName>
-                    <filters>
-                        <filter>
-                            <artifact>org.languagetool:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/services/io.grpc.LoadBalancerProvider</exclude>
-                                <exclude>META-INF/services/io.grpc.NameResolverProvider</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
-                    <shadedArtifactAttached>true</shadedArtifactAttached>
-                    <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
-                    <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                        </transformer>
-                    </transformers>
-                </configuration>
-            </plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-shade-plugin</artifactId>
+                 <executions>
+                     <execution>
+                         <phase>package</phase>
+                         <goals>
+                             <goal>shade</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+                 <configuration>
+                 <createDependencyReducedPom>false</createDependencyReducedPom>
+                     <finalName>pacbot-gcp-discovery-jar-with-dependencies</finalName>
+                     <filters>
+                         <filter>
+                             <artifact>org.languagetool:*</artifact>
+                             <excludes>
+                                 <exclude>META-INF/services/io.grpc.LoadBalancerProvider</exclude>
+                                 <exclude>META-INF/services/io.grpc.NameResolverProvider</exclude>
+                             </excludes>
+                         </filter>
+                     </filters>
+                     <shadedArtifactAttached>true</shadedArtifactAttached>
+                     <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
+                     <transformers>
+                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                         </transformer>
+                     </transformers>
+                 </configuration>
+             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
